# masquerade

./: .gitignore  README.md  REPORT.md  pyproject.toml  report.html  report_final.html
configs/len_budget/: hosted_rl.toml  selfrun_rl.toml
environments/math_len_budget/: math_len_budget.py  pyproject.toml
masquerade/: data.py  engine.py  evals.py  multiregion.py  qwen3.py  train.py  train_fused.py
results/: dspark_repro_base.json  dspark_repro_dspark.json  final06b_lr3e-5.log.jsonl  pareto_4b.jsonl  pareto_4b_hot.jsonl  pareto_local.jsonl  pareto_tight.jsonl
results/modal/: final06b_lr1e-4.log.jsonl  final06b_lr1e-5.log.jsonl
results/modal/final06b_v3_lr1e-5_hotmk/: log.jsonl
results/modal/final06b_v4_hotmk_hotemb/: log.jsonl
results/modal/fused_4b_lr1e-5c/: log.jsonl
results/modal/fused_4b_v2/: log.jsonl
results/pretrain/50m_mask_markov_v3/: log.jsonl
results/pretrain/50m_mask_wtv0.1_v3/: log.jsonl
results/pretrain/50m_mask_wtv0.4_v3/: log.jsonl
results/stage1_frozen/: acceptance_curve.jsonl  args.json  log.jsonl
results/stage1_mup/: acceptance_curve.jsonl
scripts/: bench_pareto.py  cp_demo.py  demo_server.py  embed_figs.py  engine_profile.py  eval_ckpts.py  gen_diagram.py  markov_ablation.py  modal_dspark_repro.py  modal_dspark_tau.py  modal_merge_probe.py  modal_prime_rl.py  modal_regen_4b.py  modal_rl_probe.py  modal_speculators.py  modal_train.py  plots.py  pretrain.py  regen_data.py  spark_engine_bench.py  tokenize_fineweb.py
tests/: test_engine.py  test_flex_gpu.py  test_multiregion.py  test_parity.py
(+5 files in other folders)
