[project]
name = "masquerade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
]
