[project]
name = "math-len-budget"
description = "Prompt-conditioned length-penalty math environment"
tags = ["math", "single-turn", "length-penalty"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.15.dev411",
    "math-verify>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["math_len_budget.py"]
